# ftrs-data-model-ui-poc

./: .gitignore  Makefile  project.code-workspace  pyproject.toml
.github/workflows/: pipeline-deploy-account-infrastructure.yaml  pipeline-deploy-application.yaml  stage-3-build.yaml
infrastructure/: account-wide.tfvars  application.tfvars  common.tfvars  project.tfvars
infrastructure/common/: common-variables.tf  locals.tf
infrastructure/modules/dynamodb/: output.tf  variables.tf
infrastructure/modules/lambda/: main.tf  variables.tf
infrastructure/modules/s3/: main.tf  outputs.tf  variables.tf
infrastructure/stacks/account-wide/: README.md  iam.tf  s3.tf  variables.tf  vpc.tf
infrastructure/stacks/application/: data.tf  lambda.tf  security_group.tf  variables.tf
infrastructure/stacks/terraform-management/: variables.tf
scripts/config/vale/styles/config/vocabularies/words/: accept.txt
scripts/githooks/: check-terraform-format.sh
src/: README.md  create_tables  front_end.py  generate_tables_from_xlsx_file.py  requirements.txt
src/templates/: home.html  location.html  locations.html  organisation.html  organisations.html  service.html  services.html
