[tool.poetry]
name = "ftrs-data-model-ui-poc"
version = "0.1.0"
description = ""
authors = ["NHS England"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4.0.0"
aws-lambda-powertools = {extras = ["aws-sdk"], version = "2.26.0"}
MarkupSafe = "3.0.2"
boto3 = "*"
fastapi = {extras = ["standard"], version = "^0.115.6"}
pandas = "*"
numpy = "*"
openpyxl = "*"
mangum = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
